--- a/Giai_doan_1/layout.html
+++ b/Giai_doan_1/layout.html
@@ -7,24 +7,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
     <link rel="stylesheet" href="CSS/style1.css">
+    <script src="giai_doan_2.js"></script>
 </head>
 
 <body>
-        1<div class="header">
-            HEADER
-        </div>
-      
-        <div class="partners">
-            PARTNER
+        <div class="header">
+           <!-- Slideshow container -->
+            <div class="slideshow-container">
+
+            <!-- Full-width images with number and caption text -->
+            <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img src="anh_1.jpg" style="width:100%">
+                <div class="text">Caption Text</div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img src="anh_2.jpeg" style="width:100%">
+                <div class="text">Caption Two</div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img src="anh_3.jpg" style="width:100%">
+                <div class="text">Caption Three</div>
+            </div>
+
+            <!-- Next and previous buttons -->
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+            <br>
+
+            <!-- The dots/circles -->
+            <div style="text-align:center">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+            </div>
         </div>
         
-        <div class="menu">
-            <a href="#">TRANG CHỦ</a>
-            <a href="giới thiệu">GIỚI THIỆU</a>
-            <a href="">LIÊN HỆ</a>
-            <a href="">HỎI ĐÁP</a>
-
-
+        <div class="nav">
+            <div class="menu">
+                <img src="" alt="">
+                <ul>
+                    <li><a href="#"></a>Trang chủ</li>
+                    <li><a href="#"></a>Trang chủ</li>
+                    <li><a href="#"></a>Trang chủ</li>
+                    <li><a href="#"></a>Trang chủ</li>
+                </ul>
+            </div>
         </div>
 
         <div class="#">
